--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,9 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/andyhkio/public_html/
-    - /bin/cp linkedinbadge.png $DEPLOYPATH
-    - /bin/cp marvin.html $DEPLOYPATH
-    - /bin/cp personalportfolio.html $DEPLOYPATH
-    - /bin/cp productlanding.html $DEPLOYPATH
-    - /bin/cp survey.html $DEPLOYPATH
-    - /bin/cp techdoc.html $DEPLOYPATH
+    - /bin/cp -R * $DEPLOYPATH
